// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly as a homepage 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  --breadcrumb-color: #5C6C75;
}

.dark-theme .emotion-0 {
  --breadcrumb-color: #C1C7C6;
}

.emotion-0 a,
.emotion-0 span {
  color: var(--breadcrumb-color);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus {
  text-decoration-color: #016BF8;
}

.emotion-3>span>code,
.emotion-3>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/"
          target="_self"
        >
          <span>
            Docs Home
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/atlas/"
          target="_self"
        >
          <span>
            MongoDB Atlas
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly with siteTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  --breadcrumb-color: #5C6C75;
}

.dark-theme .emotion-0 {
  --breadcrumb-color: #C1C7C6;
}

.emotion-0 a,
.emotion-0 span {
  color: var(--breadcrumb-color);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus {
  text-decoration-color: #016BF8;
}

.emotion-3>span>code,
.emotion-3>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-9>span>code,
.emotion-9>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-9:focus,
.emotion-9:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-9:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-9:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-9:hover,
.emotion-9:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-11:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-11:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/"
          target="_self"
        >
          <span>
            Docs Home
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/atlas/"
          target="_self"
        >
          <span>
            MongoDB Atlas
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-2"
      >
        <a
          class="emotion-9"
          href="/"
        >
          Atlas Device SDKs
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-11"
      >
        <a
          class="emotion-9"
          href="/sdk/cpp/"
        >
          Atlas Device SDK for C++
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-11"
      >
        <a
          class="emotion-9"
          href="/sdk/cpp/application-services/"
        >
          Application Services - C++ SDK
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
